# SysOpsLab

./: CMakeLists.txt  Makefile  README.md  libblocks.c  libblocks.h  main.c  main.cpp  mainStatic
cw01/zad1/: Makefile  libblocks.c
cw01/zad2/: Makefile  libblocks.h  raport2.txt
cw01/zad3/: Makefile  main.c  mainDynamic.c  raport3a.txt  raport3b.txt
cw02/zad1/: Makefile  main  main.c  wyniki.txt
cw02/zad2/: Makefile  main  main.c  mainNftw  mainNftw.c  test  test.c
cw03/zad1/: Makefile  main
cw03/zad2/: Makefile  child  child.c  instr.txt  main  main.c  print
cw03/zad3/: Makefile  bigAlloc  bigAlloc.c  instr.txt  main  main.c  print.c
cw04/labEx1/: main  main.c
cw04/labEx2/: Makefile  main  main.c
cw04/zad1/: Makefile  main  main.c  main2  main2.c  test  test.c
cw04/zad2/: Makefile  main  main.c
cw04/zad3/: main  main.c
cw05/labEx1/: .nfs00000000003b901200000011  Makefile  main  main.c  main2  main2.c  main3  main3.c  main4  main4.c
cw05/zad1/: Makefile  data.txt  main  main.c  main2  main2.c
cw05/zad2/: Makefile  main  main.c  master  master.c  slave  slave.c  test.txt
cw05/zad3/: Makefile  fifo  main  main.c  master  master.c  slave  slave.c
cw06/labEx1/: Makefile  main.c  main2.c
cw06/zad1/: Makefile  client.c  info.h  requests.txt  server.c
cw06/zad2/: Makefile  client  client.c  info.h  (+2 more)
cw10/: Makefile  client.c  server.c
ex1/: Makefile  libblocks.c
ex2/: Makefile  libblocks.c  main.c  mainStatic  raport2.txt
lab1/: Makefile  ex1.h  libblocks.c  libblocks.h  library.c  library.h  library1.c  library1.cpp  main.c  main.cpp
(+50 files in other folders)
